--- a/estilo.css
+++ b/estilo.css
@@ -128,13 +128,13 @@ body{
     margin-bottom: 50px;
 }
 .servicios .fila .col{
-    text-align: center;
+    text-align:center;
     width: 30%;
 }
 .servicios .fila .col .card{
     border: 1px solid #8d8d8d;
-    height: 400px;
-    background-color: #fff;
+    height: 520px;
+    background-color: #fdfdfd;
     padding: 30px;
     border-radius: 20px;
     position: relative;
